--- a/jquey/index.html
+++ b/jquey/index.html
@@ -5,8 +5,8 @@
   <title>Jquery</title>
   <script src="js/jquery.js"></script>
   <script>
-    jQuery(document).ready(function(){
-      jQuery("#btn").click(function(){
+    $(document).ready(function(){
+      $("#btn").click(function(){
         alert('ok');
       });
     });
